# STEPS

./: .bbp-project.yaml  .clang-format  .clang-tidy  .cmake-format.changes.yaml  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  AUTHORS.md  CMakeLists.txt  Doxyfile  INSTALL  LICENSE  LICENSE.md  MANIFEST.in  Makefile  Makefile.am  README  README.md  RELEASES  RELEASES.md  TESTING.md  acinclude.m4  configure.ac  default.nix  mass_replace  pyproject.toml  requirements.txt  runswig  setup.cfg  setup.py  vimproject
OpSplitOmega_h/: CMakeLists.txt  box.geo  common.hpp  cube.geo  main.cpp  mesh.cpp  mesh.hpp  mesh_utils.cpp  mesh_utils.hpp  mol_state.hpp  simulation.cpp  simulation.hpp  simulation_data.hpp  square.geo  test_rssa.cpp  test_rssa.hpp
OpSplitOmega_h/kproc/: diffusions.cpp  diffusions.hpp  kproc_state.cpp  kproc_state.hpp  reactions.cpp  reactions.hpp  surface_reactions.cpp  surface_reactions.hpp
OpSplitOmega_h/operator/: diffusion_operator.cpp  diffusion_operator.hpp  rssa_operator.cpp  rssa_operator.hpp  ssa_operator.cpp  ssa_operator.hpp
common/: CMakeLists.txt  debug.cpp  memutils.cpp
common/include/: collection.hpp  debug.hpp  distributions.hpp  flat_multimap.hpp  math.hpp  memutils.hpp  mpitools.hpp  strong_id.hpp  strong_ids.hpp  strong_string.hpp  vec3.hpp  version.hpp.in
common/include/opsplit/: compdef.hpp  diffdef.hpp  fwd.hpp  mesh.hpp  patchdef.hpp  reacdef.hpp  sreacdef.hpp  statedef.hpp  type_traits.hpp  vocabulary.hpp
common/opsplit/: compdef.cpp  diffdef.cpp  mesh.cpp  patchdef.cpp  reacdef.cpp  sreacdef.cpp  statedef.cpp
common/opsplit/test/: Ca_burst_background.cpp  Ca_burst_background.hpp  (+15 more)
cpp/steps/: Makefile.am  common.h  error.cpp  error.hpp  steps.cpp  steps.hpp
doc/: Makefile.am  Readme.txt  devnotes.doc  todo.doc
doc/gettingstarted_sim/: chap02_secondorderreaction01.py  chap02_secondorderreaction04.py  chap02_secondorderreaction05.py  chap02_secondorderreaction06.py  chap02_secondorderreaction07.py  gettingstarted_sim.bib  gettingstarted_sim.tex  secondorderreaction02.py  secondorderreaction03.py  secondorderreaction08.py  simplediffusion01.ai  simplediffusion01.fig  simplediffusion02.ai  simplediffusion02.fig
doc/html/: .buildinfo  API_geom.html  API_model.html  API_ref.html  API_rng.html  API_solver.html  API_utilities_meshio.html  API_utilities_visual.html  diffusion.html  genindex.html  getting_started.html  ip3.html  manual_index.html  modindex.html  objects.inv  preliminary_func.html  search.html  searchindex.js  well_mixed.html
extras/: Makefile.am  metrics.pl  untab.sh
py/: CMakeLists.txt  cmake_setup.py.in
py/steps/: __init__.py  geom.py  model.py  quiet.py  rng.py  solver.py  steps_swig.py  steps_swig_numpy.py
pysteps/: CMakeLists.txt  cmake_setup.py.in  cysteps.pyx  cysteps__globals.pyx  cysteps_dist.pyx  cysteps_geom.pyx  cysteps_model.pyx  cysteps_mpi.pyx  cysteps_rng.pyx  cysteps_solver.pyx  generate_requirements.py  pyproject.toml.in  setup.cfg.in  setup.py  std.pxd  std_fstream.pxd  steps.pxd  steps_common.pxd  steps_dist.pxd  steps_dist_solver.pxd  steps_dist_tetmesh.pxd  steps_model.pxd  steps_mpi.pxd  steps_rng.pxd  steps_solver.pxd  steps_tetexact.pxd  steps_tetmesh.pxd  steps_tetode.pxd  steps_wm.pxd  steps_wmdirect.pxd  steps_wmrk4.pxd  steps_wmrssa.pxd
pysteps/_tmp/: compile_pysteps.sh  pybindings_raw.tgz
pysteps/steps/: __init__.py  geom.py  model.py  quiet.py  rng.py  solver.py
pysteps/stepsblender/: blenderloader.py  blenderscript.py  dataloader.py  groups.py  load.py  objects.py  state.py  statedep.py  utils.py
src/: CMakeLists.txt
src/steps/: common.h  error.cpp  error.hpp  files-to-patch  finish.cpp  finish.hpp  init.cpp  init.hpp
steps/: Makefile.am  __init__.py  common.h  cubit.py  doxygen.hpp  error.i  error.py  geom.i  geom.py  geom_swig.py  geom_wrap.cpp  meshio.py  model.i  model.py  model_swig.py  model_wrap.cpp  rng.i  rng.py  solver.i  solver.py  solver_swig.py  solver_wrap.cpp  steps_swig.py  tetgen.py  tools.py
steps/distmesh/: Makefile.am  __init__.py  core.py  tools.py
steps/examples/: Makefile.am  lotka_volterra.py  rev_isomer.py  virinf.py
steps/geom/: Makefile.am  __init__.py  core.py  tetgen.py  tetmesh.py  tetrahedron.py  triangle.py  wm.py
steps/math/: Makefile.am  aabbox3.cpp  aabbox3.hpp  accumulate.hpp  color.hpp  constants.hpp  doxygen.hpp  geometry.cpp  geometry.hpp  iota.hpp  linalg.cpp  linalg.hpp  matrix4.cpp  matrix4.hpp  normal3.cpp  normal3.hpp  point3.cpp  point3.hpp  tetrahedron.cpp  tetrahedron.py  tetrahedron_test.py  tools.cpp  tools.hpp  triangle.py  triangle_test.py  vector3.cpp  vector3.hpp
steps/model/: Makefile.am  __init__.py  model.py  reaction.py  species.py  surfsys.py  volsys.py
steps/rng/: Makefile.am  __init__.py  doxygen.hpp  mt19937.cpp  mt19937.hpp  rng.cpp  rng.hpp  rng_core.i
steps/sim/: Makefile.am  controller.py  doxygen.hpp  tetexact.py  tetexact_core.i  wmdirect.py  wmdirect_core.i
steps/tests/: Makefile.am  __init__.py  test_misc.py  test_model.py  tools.py
steps/tetexact/: Makefile.am  func_ssa.cpp  kproc.hpp  solver.py  solver_core.i  state.hpp  tet.cpp  tetexact.py  tetexact_core.i
steps/utilities/: Makefile.am  __init__.py  cubitctrl.py  meshctrl.py  meshio.py  sbml.py  visual.py
steps/wmdirect/: Makefile.am  __init__.py  doxygen.hpp  func_ssa.cpp  solver.py  solver_core.i  wmdirect_core.i
steps/wmrk4/: Makefile.am  __init__.py  solver.py  solver_core.i
test/: CMakeLists.txt  __init__.py  ci-python-requirements
test/mesh/: 3_tets.msh  3tets_2patches_2comp.geo  3tets_2patches_2comp.msh  axon_cube_L1000um_D866nm_1135tets.msh  box.msh  cube.msh  diamond.msh  sphere_rad1_37tets.msh  sphere_rad1_46tets.geo  sphere_rad1_46tets.msh  two_comp_cyl.msh  two_comp_cyl_2.msh
test/validation/: CMakeLists.txt  README  __init__.py  bounddiff.py  csd_clamp.py  first_order_irev.py  first_order_rev.py  kisilevich.py  masteq.py  masteq_diff.py  run_validation_tests.py  second_order_irev_2D.py  second_order_irev_AA.py  second_order_irev_AB.py  tol_funcs.py  unbdiff.py  validation.py
(+1722 files in other folders)
